--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
-<h1>Welcome To Ponies Pinterest!</h1>
-<p>Created by <a href="http://pistachiopony.com">Pistachio Pony</a></p>
+<div class="center hero-unit">
+ <h1>Welcome To Ponies Pinterest!</h1>
+  <p>Created by <a href="http://pistachiopony.com">Pistachio Pony</a></p>
 <p>
 	I wanted to practice my rails and create a Pinterest style application.
 	Thanks for dropping by!
 </p>
-<p>
-	<a href="#">Sign Up Now!</a>
-</p>
-
+<p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
+   
+</div>
 	
