added ability to upload pics

--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Listing pins</h1>
+<h1>List of Pony Pins</h1>
 
 <table class= "table table-striped">
  <thead>
   <tr>
+	<th>Pony Image</th>
     <th>Description</th>
     <th></th>
     <th></th>
