--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -1,6 +1,10 @@
 <%= simple_form_for(@pin, html: { class: "form-horizontal" }) do |f| %>
   <%= f.error_notification %>
+  <%= f.full_error :image_file_size, class: "alert alert_error" %>
+  <%= f.full_error :image_content_type, class: "alert alert_error" %>
+
   <div class="form-inputs">
+	<%= f.input :image, label:"upload a Horsie Pic!" %>
     <%= f.input :description, as: :text, input_html: { rows: "3" } %>
   </div>
 
