--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,21 +1,3 @@
-<h1>List of Pony Pins</h1>
-
-<table class= "table table-striped">
- <thead>
-  <tr>
-	<th>Pony Image</th>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
- </thead>
-
-<tbody>
+<div id="pins">
  <%= render @pins %>
-</tbody>
-</table>
-
-<br />
-
-<%= link_to 'New Pin', new_pin_path %>
+</div>
