Tweak html and reroute route to pins#index

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-<h1>WooHoo! You Logged In!</h1>
+<h1>WooHoo! Now You Can Post Some Pony Pics!</h1>
 <% else %>
 <div class="center hero-unit">
  <h1>Welcome To Ponies Pinterest!</h1>
