--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-			<%= link_to "Ponies Pinterest", root_path, class:"brand" %>
+			<%= link_to "Ponies Pinboard", root_path, class:"brand" %>
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li>
@@ -18,7 +18,7 @@
                     </ul>
                     <ul class="nav pull-right">
     				  <% if user_signed_in? %>
-                        <li><%= link_to "Add+", new_pin_path %></li>
+                        <li><%= link_to "Add+ Pony Pic", new_pin_path %></li>
 						<li><%= link_to "Edit Profile", edit_user_registration_path %></li>
 						<li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
 						<% else %>
