--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.full_error :image_content_type, class: "alert alert_error" %>
 
   <div class="form-inputs">
-	<%= f.input :image, label:"upload a Horsie Pic!" %>
+	<%= f.input :image, label:"upload a Pony Pic!" %>
     <%= f.input :description, as: :text, input_html: { rows: "3" } %>
   </div>
 
