--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,8 +1,8 @@
 <% if user_signed_in? %>
-<h1>WooHoo! Now You Can Post Some Pony Pics!</h1>
+<h1>Post Some Pony Pics!</h1>
 <% else %>
 <div class="center hero-unit">
- <h1>Welcome To Ponies Pinterest!</h1>
+ <h1>Welcome To Pony Pinner!</h1>
   <p>Created by <a href="http://pistachiopony.com">Pistachio Pony</a></p>
 <p>
 	I wanted to practice my rails and create a Pinterest style application.
