--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,7 @@
 <h1>About</h1>
 <p>This is a project I created to practice my Ruby On Rails.
-  <br/> 
-I wanted to create a Pinterest style application that would aggregate photos of horses. 
-  <br/> 
-I love drawing horses and often have to search the web for different photos of horses to study.
-  <br/>
-This app will make it a lot easier to keep track of all the ponies I enjoy to look at and get inspiration from to draw. 
-  <br/> 
+
+I love drawing horses and I want to be able to have all the pony pics that I use for inspiration all in one place. Its too distracting to go onto pinterest or flicker. I start to look at other stuff and waste time browsing when I should be drawing. So I create this Pinterest Style Web App to have only pics of horses and ponies. Hope you enjoy and add to it!
 </p>
 <p>If you want to learn more about me, trot on over to my site <%= link_to"PistachioPony.com", "http://pistachiopony.com" %>
 </p>
