--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-			<%= link_to "Ponies Pinboard", root_path, class:"brand" %>
+			<%= link_to "Pony Pinner", root_path, class:"brand" %>
                 <div class="nav-collapse">
                     <ul class="nav">
                         <li>
