--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-<h1>Post Some Pony Pics!</h1>
+<h1>Pin Up Some Pony Pics!</h1>
 <% else %>
 <div class="center hero-unit">
  <h1>Welcome To Pony Pinner!</h1>
