Add Endless Scroll

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,6 @@
 <h1>About</h1>
-<p>This is a project I created to practice my Ruby On Rails.
-
-I love drawing horses and I want to be able to have all the pony pics that I use for inspiration all in one place. Its too distracting to go onto pinterest or flicker. I start to look at other stuff and waste time browsing when I should be drawing. So I create this Pinterest Style Web App to have only pics of horses and ponies. Hope you enjoy and add to it!
+<p>I love drawing horses and I want the pony pics that I use for inspiration all in one place. Its too distracting to go onto pinterest or flicker. I start to look at other stuff and waste time browsing when I should be drawing. So I created this Pinterest Style Web App to have only pics of horses and ponies. Hope you enjoy and add to it!
 </p>
+<p>Thanks to Mattan Griffel of <%= link_to"One Month Rails", "http://onemonthrails.com" %> for his generosity and teaching me how to how to create Ruby on Rails apps. I highly recommend his classes, I have taken them all and they are fantastic!</p>  
 <p>If you want to learn more about me, trot on over to my site <%= link_to"PistachioPony.com", "http://pistachiopony.com" %>
 </p>
